{
  "version": 4,
  "terraform_version": "1.1.7",
  "serial": 120,
  "lineage": "bfdd4a06-5be4-03df-9fa3-d176764983e3",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fc25dd2506cf6d",
            "arn": "arn:aws:ec2:us-east-1:123301406642:instance/i-000ee5eb2c6412449",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-000ee5eb2c6412449",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-003af330797386348",
            "private_dns": "ip-10-0-1-110.ec2.internal",
            "private_ip": "10.0.1.110",
            "public_ip": "3.89.87.75",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-09bd0ebb7fb3b39ca",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-0be9f67e749212740",
            "tags": {
              "Name": "Web Server"
            },
            "tags_all": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0feb7af109c4140ef"
            ]
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_security_group.webserver-sg",
            "aws_subnet.web-subnet-1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "webserver2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0f9fc25dd2506cf6d",
            "arn": "arn:aws:ec2:us-east-1:123301406642:instance/i-0243a4544bf2d230b",
            "associate_public_ip_address": true,
            "availability_zone": "us-east-1b",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-0243a4544bf2d230b",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_put_response_hop_limit": 1,
                "http_tokens": "optional",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "primary_network_interface_id": "eni-03dec7558b7a1d1a4",
            "private_dns": "ip-10-0-2-11.ec2.internal",
            "private_ip": "10.0.2.11",
            "public_ip": "34.204.69.226",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/xvda",
                "encrypted": false,
                "iops": 100,
                "throughput": 0,
                "volume_id": "vol-0ce554aa11f37dcd5",
                "volume_size": 8,
                "volume_type": "gp2"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-09c3320f7b43ef763",
            "tags": {
              "Name": "Web Server"
            },
            "tags_all": {
              "Name": "Web Server"
            },
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-0feb7af109c4140ef"
            ]
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_security_group.webserver-sg",
            "aws_subnet.web-subnet-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "igw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:internet-gateway/igw-01c8d4ab36006a64f",
            "id": "igw-01c8d4ab36006a64f",
            "owner_id": "123301406642",
            "tags": {
              "Name": "Demo IGW"
            },
            "tags_all": {
              "Name": "Demo IGW"
            },
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123301406642:loadbalancer/app/External-LB/54cb644bd06a8813",
            "arn_suffix": "app/External-LB/54cb644bd06a8813",
            "desync_mitigation_mode": "defensive",
            "dns_name": "External-LB-535928213.us-east-1.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-1:123301406642:loadbalancer/app/External-LB/54cb644bd06a8813",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "External-LB",
            "security_groups": [
              "sg-0c435330a3e62bf8c"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-09c3320f7b43ef763"
              },
              {
                "subnet_id": "subnet-0be9f67e749212740"
              }
            ],
            "subnets": [
              "subnet-09c3320f7b43ef763",
              "subnet-0be9f67e749212740"
            ],
            "vpc_id": "vpc-0fe74569f2a89bc9e",
            "zone_id": "Z35SXDOTRQ7X7K"
          },
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_subnet.web-subnet-1",
            "aws_subnet.web-subnet-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123301406642:listener/app/External-LB/54cb644bd06a8813/92b935b763a63293",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123301406642:targetgroup/ALB-TG/7182a2d6e1238528",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123301406642:listener/app/External-LB/54cb644bd06a8813/92b935b763a63293",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-1:123301406642:loadbalancer/app/External-LB/54cb644bd06a8813",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_lb.external-elb",
            "aws_lb_target_group.external-elb",
            "aws_security_group.web-sg",
            "aws_subnet.web-subnet-1",
            "aws_subnet.web-subnet-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "external-elb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-1:123301406642:targetgroup/ALB-TG/7182a2d6e1238528",
            "arn_suffix": "targetgroup/ALB-TG/7182a2d6e1238528",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 5,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 5,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-1:123301406642:targetgroup/ALB-TG/7182a2d6e1238528",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "ALB-TG",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-elb1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:123301406642:targetgroup/ALB-TG/7182a2d6e1238528-20220425200611301100000002",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123301406642:targetgroup/ALB-TG/7182a2d6e1238528",
            "target_id": "i-000ee5eb2c6412449"
          },
          "dependencies": [
            "aws_instance.webserver1",
            "aws_lb_target_group.external-elb",
            "aws_security_group.web-sg",
            "aws_security_group.webserver-sg",
            "aws_subnet.web-subnet-1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_lb_target_group_attachment",
      "name": "external-elb2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "arn:aws:elasticloadbalancing:us-east-1:123301406642:targetgroup/ALB-TG/7182a2d6e1238528-20220425200611891500000003",
            "port": 80,
            "target_group_arn": "arn:aws:elasticloadbalancing:us-east-1:123301406642:targetgroup/ALB-TG/7182a2d6e1238528",
            "target_id": "i-0243a4544bf2d230b"
          },
          "dependencies": [
            "aws_instance.webserver2",
            "aws_lb_target_group.external-elb",
            "aws_security_group.web-sg",
            "aws_security_group.webserver-sg",
            "aws_subnet.web-subnet-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "web-rt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:route-table/rtb-00cdf7eddf6d5707f",
            "id": "rtb-00cdf7eddf6d5707f",
            "owner_id": "123301406642",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-01c8d4ab36006a64f",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "WebRT"
            },
            "tags_all": {
              "Name": "WebRT"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-070c6ad4e780b8848",
            "route_table_id": "rtb-00cdf7eddf6d5707f",
            "subnet_id": "subnet-0be9f67e749212740"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web-rt",
            "aws_subnet.web-subnet-1",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-00e8693d8b14e1ced",
            "route_table_id": "rtb-00cdf7eddf6d5707f",
            "subnet_id": "subnet-09c3320f7b43ef763"
          },
          "dependencies": [
            "aws_internet_gateway.igw",
            "aws_route_table.web-rt",
            "aws_subnet.web-subnet-2",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "database-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:security-group/sg-08dd7d054ef9f113a",
            "description": "Allow inbound traffic from application layer",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 32768,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 65535
              }
            ],
            "id": "sg-08dd7d054ef9f113a",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from application layer",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0feb7af109c4140ef"
                ],
                "self": false,
                "to_port": 3306
              },
              {
                "cidr_blocks": [],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0feb7af109c4140ef"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Database-SG",
            "name_prefix": "",
            "owner_id": "123301406642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Database-SG"
            },
            "tags_all": {
              "Name": "Database-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_security_group.webserver-sg",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:security-group/sg-0c435330a3e62bf8c",
            "description": "Allow HTTP inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0c435330a3e62bf8c",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "HTTP from VPC",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Web-SG",
            "name_prefix": "",
            "owner_id": "123301406642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Web-SG"
            },
            "tags_all": {
              "Name": "Web-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "webserver-sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:security-group/sg-0feb7af109c4140ef",
            "description": "Allow inbound traffic from ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0feb7af109c4140ef",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "Allow traffic from web layer",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c435330a3e62bf8c"
                ],
                "self": false,
                "to_port": 80
              },
              {
                "cidr_blocks": [],
                "description": "SSH from VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c435330a3e62bf8c"
                ],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "Webserver-SG",
            "name_prefix": "",
            "owner_id": "123301406642",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "Webserver-SG"
            },
            "tags_all": {
              "Name": "Webserver-SG"
            },
            "timeouts": null,
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.web-sg",
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:subnet/subnet-064b01bf2f803d4f9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.11.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-064b01bf2f803d4f9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123301406642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-1a"
            },
            "tags_all": {
              "Name": "Application-1a"
            },
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "application-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:subnet/subnet-07c66bf7e408a769c",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.12.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-07c66bf7e408a769c",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123301406642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Application-2b"
            },
            "tags_all": {
              "Name": "Application-2b"
            },
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:subnet/subnet-019902cc4913eaf4f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.21.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-019902cc4913eaf4f",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123301406642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-1a"
            },
            "tags_all": {
              "Name": "Database-1a"
            },
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "database-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:subnet/subnet-0d3e827e52403cf5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.22.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0d3e827e52403cf5d",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "123301406642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Database-2b"
            },
            "tags_all": {
              "Name": "Database-2b"
            },
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet-1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:subnet/subnet-0be9f67e749212740",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0be9f67e749212740",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "123301406642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web-1a"
            },
            "tags_all": {
              "Name": "Web-1a"
            },
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "web-subnet-2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:subnet/subnet-09c3320f7b43ef763",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-09c3320f7b43ef763",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "123301406642",
            "private_dns_hostname_type_on_launch": "ip-name",
            "tags": {
              "Name": "Web-2b"
            },
            "tags_all": {
              "Name": "Web-2b"
            },
            "vpc_id": "vpc-0fe74569f2a89bc9e"
          },
          "dependencies": [
            "aws_vpc.my-vpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "my-vpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:123301406642:vpc/vpc-0fe74569f2a89bc9e",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-082524722c3557fc0",
            "default_route_table_id": "rtb-048f4724aa0c07321",
            "default_security_group_id": "sg-0b632aa5b9b97a48c",
            "dhcp_options_id": "dopt-03dd975be101f4118",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0fe74569f2a89bc9e",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-048f4724aa0c07321",
            "owner_id": "123301406642",
            "tags": {
              "Name": "Demo VPC"
            },
            "tags_all": {
              "Name": "Demo VPC"
            }
          }
        }
      ]
    }
  ]
}